// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchBranding calls fetch data for branding and protectedBranding 1`] = `
Object {
  "entityName": "branding",
  "tableType": undefined,
  "type": "FETCH_DATA",
}
`;

exports[`FetchBranding calls fetch data for branding and protectedBranding 2`] = `
Object {
  "entityName": "protectedBranding",
  "tableType": undefined,
  "type": "FETCH_DATA",
}
`;
